# 233dReconstruction

./: .gitignore  CMakeLists.txt  README.md
Src/Calib/: calibrate_camera_charuco.cpp  demo.cpp  filename.yml
Src/Recon/: main.cpp
Src/Segmentation/: main.cpp
Src/SolvePnP/: PnpSolver.cpp  PnpSolver.h  main.cpp  test.cpp
Src/TakePhoto/: demo.cpp
Src/Visualization/: CameraRt.cpp  test.cpp
src/Calib/: CMakeLists.txt  CharcnoCali.py  MyCaliOnline.cpp  caliberation_result_qingyun.txt  calibrate_camera_charuco.cpp  demo.cpp  filename.txt  filenamess.txt  ya.txt  yaya.txt
src/Recon/: CMakeLists.txt  main.cpp
src/Segmentation/: CMakeLists.txt  Segmenter.cpp  Segmenter.h  main.cpp
src/SolvePnP/: CMakeLists.txt  PnpSolver.cpp  PnpSolver.h  main.cpp
src/TakePhoto/: CMakeLists.txt  demo.cpp
src/Visualization/: CMakeLists.txt  CameraRt.cpp  test.cpp
